--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,9 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "graphql": "^15.4.0",
     "bootstrap": "^4.4.1",
+    "face-api.js": "^0.22.2",
+    "graphql": "^15.4.0",
     "jwt-decode": "^2.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.0.1",
