--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,10 @@
     "apollo-server-express": "^2.19.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
+    "face-api.js": "^0.22.2",
+    "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10",
-    "graphql": "^15.5.1"
+    "mongoose": "^5.9.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
