--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-images-upload": "^1.2.8",
-    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
