--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.19.0",
+    "babel": "^6.23.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "face-api.js": "^0.22.2",
