--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "babel": "^6.23.0",
     "bootstrap": "^5.1.3",
     "face-api.js": "^0.22.2",
     "graphql": "^15.4.0",
