--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "face-api.js": "^0.22.2",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "react-s3": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
