--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-image-gallery": "^1.2.7",
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
