--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "face-api.js": "^0.22.2",
     "graphql": "^15.4.0",
+    "jquery": "^3.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
